# PromptOpt

./: .gitignore  AGENTS.md  PYTHON_RULES.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  promptopt.yml
docs/: m1-eval-foundation-progress.md  m2-diagnostics-progress.md  m3-rewrite-optimize-progress.md  m4-regression-gate-progress.md  m5-prompt-ci-progress.md  m6-plugin-ecosystem-progress.md  m7-web-platform-progress.md  plugin-development.md
examples/classification/: .promptopt.yaml  README.md
examples/classification/candidates/: baseline.yaml
examples/classification/datasets/: dataset.yaml  intent.json
examples/classification/tasks/: task.yaml
examples/json_extraction/: .promptopt.yaml  README.md
examples/json_extraction/candidates/: baseline.yaml
examples/json_extraction/datasets/: dataset.yaml  medical_ner.json
examples/json_extraction/tasks/: task.yaml
examples/qa/: README.md
examples/qa/candidates/: baseline.yaml
examples/qa/datasets/: dataset.yaml  qa.json
examples/qa/tasks/: task.yaml
src/promptopt/: __init__.py  plugins.py
src/promptopt/cli/: __init__.py  main.py  reporting.py
src/promptopt/core/: __init__.py  candidate.py  dataset.py  evaluation.py  lineage.py  run.py  task.py
src/promptopt/diagnostics/: __init__.py  analyzer.py
src/promptopt/evaluators/: __init__.py  base.py  exact_match.py  f1.py  json_validator.py
src/promptopt/models/: __init__.py  base.py  litellm_adapter.py
tests/: test_core.py  test_dataset.py  test_diagnostics.py  test_eval_pipeline.py  test_evaluators.py  test_examples.py  test_optimize.py  test_plugins.py  test_search_select.py  test_verify.py  test_web_api.py
tests/data/: candidate.yaml  dataset.csv  dataset.json  dataset.yaml  dataset_config.yaml  dataset_list.json  task.yaml
(+10 files in other folders)
